--- a/site/public/dashboard/jogo.html
+++ b/site/public/dashboard/jogo.html
@@ -21,23 +21,21 @@
                 </div>
             </div>
 
-
-
             <div class="opcoes">
                 <ul>
                     <li>
-                        <a href="pontuacao.html">
-                            <span>Pontuação</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="descubra.html">
-                            <span>Descubra o personagem</span>
+                        <a href="estatistica.html">
+                            <span>Estatísticas</span>
                         </a>
                     </li>
                     <li class="destaque">
-                        <a href="teste.html">
-                            <span>Teste de conhecimentos</span>
+                        <a href="jogo.html">
+                            <span>Minigame</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="quiz.html">
+                            <span>Quiz</span>
                         </a>
                     </li>
                 </ul>
@@ -50,15 +48,18 @@
             </div>
         </div>
 
+        <!-- parte da direita -->
         <div class="area">
-            <div class="topo">
-                <span>10 QUESTÕES</span>
-            </div>
-    
-            <div class="botoes">
-                <a href="../index.html">
-                    <button class="botao jogo">Iniciar jogo</button>
-                </a>
+            <div class="container">
+                <div class="topo">
+                    <span>QUAL É O PERSONAGEM?</span>
+                </div>
+
+                <div class="botoes">
+                    <a href="jogo2.html">
+                        <button class="botao jogo">Iniciar jogo</button>
+                    </a>
+                </div>
             </div>
         </div>
     </div>
