--- a/site/public/dashboard/quiz.html
+++ b/site/public/dashboard/quiz.html
@@ -26,18 +26,18 @@
             <div class="opcoes">
                 <ul>
                     <li>
-                        <a href="pontuacao.html">
-                            <span>Pontuação</span>
+                        <a href="estatistica.html">
+                            <span>Estatísticas</span>
                         </a>
                     </li>
                     <li>
-                        <a href="descubra.html">
-                            <span>Descubra o personagem</span>
+                        <a href="jogo.html">
+                            <span>Minigame</span>
                         </a>
                     </li>
                     <li class="destaque">
-                        <a href="teste.html">
-                            <span>Teste de conhecimentos</span>
+                        <a href="quiz.html">
+                            <span>Quiz</span>
                         </a>
                     </li>
                 </ul>
@@ -46,6 +46,18 @@
             <div class="botoes">
                 <a href="../index.html">
                     <button class="botao">Sair</button>
+                </a>
+            </div>
+        </div>
+
+        <div class="area">
+            <div class="topo">
+                <span>10 QUESTÕES</span>
+            </div>
+    
+            <div class="botoes">
+                <a href="../index.html">
+                    <button class="botao jogo">Iniciar jogo</button>
                 </a>
             </div>
         </div>
