--- a/site/public/dashboard/quiz2.html
+++ b/site/public/dashboard/quiz2.html
@@ -25,19 +25,19 @@
 
             <div class="opcoes">
                 <ul>
+                    <li>
+                        <a href="estatistica.html">
+                            <span>Estatísticas</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="jogo.html">
+                            <span>Minigame</span>
+                        </a>
+                    </li>
                     <li class="destaque">
-                        <a href="pontuacao.html">
-                            <span>Pontuação</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="descubra.html">
-                            <span>Descubra o personagem</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="teste.html">
-                            <span>Teste de conhecimentos</span>
+                        <a href="quiz.html">
+                            <span>Quiz</span>
                         </a>
                     </li>
                 </ul>
