--- a/site/public/personagens.html
+++ b/site/public/personagens.html
@@ -48,7 +48,7 @@
                 </div>
                 <div class="card">
                     <img src="assets/pdragao.svg" alt="">
-                    <span>GATO DE BOTAS</span>
+                    <span>DRAGÃO</span>
                 </div>
             </div>
 
@@ -63,7 +63,7 @@
                 </div>
                 <div class="card">
                     <img src="assets/pmerlin.svg" alt="">
-                    <span>DRAGAO</span>
+                    <span>MERLIN</span>
                 </div>
                 <div class="card">
                     <img src="assets/parthur.svg" alt="">
@@ -73,7 +73,7 @@
 
             <div class="linha">
                 <div class="card">
-                    <img src="assets/pfaarquad.svg" alt="">
+                    <img src="assets/pfarquaad.svg" alt="">
                     <span>LORDE FARQUAAD</span>
                 </div>
                 <div class="card">
@@ -86,17 +86,17 @@
                 </div>
                 <div class="card">
                     <img src="assets/prumpelstiltskin.svg" alt="">
-                    <span>RUMPELSTILSTSKIN</span>
+                    <span>RUMPELSTILTSKIN</span>
                 </div>
             </div>
 
             <div class="botoes">
                 <a href="personagens.html">
-                    <button class="botao preto">1</button>
+                    <button class="botao branco">1</button>
                 </a>
 
                 <a href="personagens2.html">
-                    <button class="botao branco">2</button>
+                    <button class="botao tranparente">2</button>
                 </a>
             </div>
         </div>
