--- a/site/public/cadastro.html
+++ b/site/public/cadastro.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 
 <head>
     <title>Shrek | Cadastro</title>
@@ -14,28 +14,28 @@
                     <span class="titulo">Criar nova conta</span>
                     <div class="campo">
                         <span>Nome:</span>
-                        <input id="inputNome" class="input" />
+                        <input id="inputNome" class="input" placeholder="Digite seu nome" />
                     </div>
                     <div class="campo">
                         <span>Email:</span>
-                        <input id="inputEmail" class="input" />
+                        <input id="inputEmail" class="input" placeholder="Digite seu email" />
                     </div>
                     <div class="campo">
                         <span>Senha:</span>
-                        <input type="password" id="inputSenha" class="input" />
+                        <input id="inputSenha" type="password" class="input" placeholder="Digite sua senha" />
                     </div>
                     <div class="campo">
                         <span>Confirmar senha:</span>
-                        <input type="password" id="inputConfirmarSenha" class="input" />
+                        <input id="inputConfirmarSenha" type="password" class="input" placeholder="Repita sua senha" />
                     </div>
 
                     <div class="botoes">
                         <a href="index.html">
                             <button class="botao voltar">Voltar</button>
                         </a>
-                        <a href="login.html">
-                            <button class="botao ir">Cadastrar</button>
-                        </a>
+
+                        <button class="botao ir">Cadastrar</button>
+
                     </div>
                 </div>
 
@@ -108,5 +108,9 @@
         });
 
         return false;
+    }
+
+    function sumirMensagem() {
+        cardErro.style.display = "none"
     }
 </script>
