--- a/site/public/personagens2.html
+++ b/site/public/personagens2.html
@@ -92,11 +92,11 @@
 
             <div class="botoes">
                 <a href="personagens.html">
-                    <button class="botao branco">1</button>
+                    <button class="botao tranparente">1</button>
                 </a>
 
                 <a href="personagens2.html">
-                    <button class="botao preto">2</button>
+                    <button class="botao branco">2</button>
                 </a>
             </div>
         </div>
