--- a/site/public/dashboard/quiz.html
+++ b/site/public/dashboard/quiz.html
@@ -52,12 +52,12 @@
 
         <div class="area">
             <div class="topo">
-                <span>10 QUESTÕES</span>
+                <span>VOCÊ REALMENTE CONHECE SHREK?</span>
             </div>
     
             <div class="botoes">
-                <a href="../index.html">
-                    <button class="botao jogo">Iniciar jogo</button>
+                <a href="quiz2.html">
+                    <button class="botao jogo">Iniciar quiz</button>
                 </a>
             </div>
         </div>
