--- a/site/public/personagens.html
+++ b/site/public/personagens.html
@@ -10,7 +10,7 @@
     <div class="header">
         <div class="container">
             <div class="titulo">
-                <img src="assets/logo.svg" height="100%" alt="">
+                <img src="assets/logo.svg" height="100%">
             </div>
 
             <div class="navbar">
@@ -35,57 +35,57 @@
         <div class="container">
             <div class="linha">
                 <div class="card">
-                    <img src="assets/pshrek.svg" alt="">
+                    <img src="assets/pshrek.svg">
                     <span>SHREK</span>
                 </div>
                 <div class="card">
-                    <img src="assets/pfiona.svg" alt="">
+                    <img src="assets/pfiona.svg">
                     <span>FIONA</span>
                 </div>
                 <div class="card">
-                    <img src="assets/pburro.svg" alt="">
+                    <img src="assets/pburro.svg">
                     <span>BURRO</span>
                 </div>
                 <div class="card">
-                    <img src="assets/pdragao.svg" alt="">
+                    <img src="assets/pdragao.svg">
                     <span>DRAGÃO</span>
                 </div>
             </div>
 
             <div class="linha">
                 <div class="card">
-                    <img src="assets/pharold.svg" alt="">
+                    <img src="assets/pharold.svg">
                     <span>REI HAROLD</span>
                 </div>
                 <div class="card">
-                    <img src="assets/plillian.svg" alt="">
+                    <img src="assets/plillian.svg">
                     <span>RAINHA LILLIAN</span>
                 </div>
                 <div class="card">
-                    <img src="assets/pmerlin.svg" alt="">
+                    <img src="assets/pmerlin.svg">
                     <span>MERLIN</span>
                 </div>
                 <div class="card">
-                    <img src="assets/parthur.svg" alt="">
+                    <img src="assets/parthur.svg">
                     <span>ARTHUR</span>
                 </div>
             </div>
 
             <div class="linha">
                 <div class="card">
-                    <img src="assets/pfarquaad.svg" alt="">
+                    <img src="assets/pfarquaad.svg">
                     <span>LORDE FARQUAAD</span>
                 </div>
                 <div class="card">
-                    <img src="assets/pencantado.svg" alt="">
+                    <img src="assets/pencantado.svg">
                     <span>ENCANTADO</span>
                 </div>
                 <div class="card">
-                    <img src="assets/pfada.svg" alt="">
+                    <img src="assets/pfada.svg">
                     <span>FADA MADRINHA</span>
                 </div>
                 <div class="card">
-                    <img src="assets/prumpelstiltskin.svg" alt="">
+                    <img src="assets/prumpelstiltskin.svg">
                     <span>RUMPELSTILTSKIN</span>
                 </div>
             </div>
