--- a/site/public/dashboard/quiz2.html
+++ b/site/public/dashboard/quiz2.html
@@ -4,6 +4,7 @@
 <head>
     <title>Dashboard | Pontuação</title>
     <link rel="stylesheet" href="css/menu.css">
+    <link rel="stylesheet" href="css/quiz.css">
 </head>
 
 <body>
@@ -14,8 +15,8 @@
 
                 <div class="infoUsuario">
                     <div class="icons">
-                        <img src="../assets/icongato.svg" style="height: 80px;">
-                        <img src="../assets/iconfoto.svg" style="height: 21px;">
+                        <img src="../assets/icongato.svg" style="height: 80px">
+                        <img src="../assets/iconfoto.svg" style="height: 21px">
                     </div>
                     <span id="nomeUsuario">Samu</span>
                 </div>
@@ -49,8 +50,154 @@
                 </a>
             </div>
         </div>
+
+        <!-- parte da direita -->
+        <div class="area">
+            <div class="container">
+                <div id="divQuiz" class="quiz">
+                    <div class="bh">
+                        <div class="info">
+                            <span>QUESTÃO <span id="spanQuestao"></span></span>
+                            <span>ACERTOS: <span id="spanAcertos"></span>/10</span>
+                        </div>
+
+                        <div class="classPergunta">
+                            <span id="spanPergunta"></span>
+                        </div>
+
+                        <div id="divBotoes" class="botoes">
+                            <div class="linha">
+                                <button onclick="validacao(0)" class="botao texto">
+                                    <span id="spanBotao1"></span>
+                                </button>
+                                <button onclick="validacao(1)" class="botao texto">
+                                    <span id="spanBotao2"></span>
+                                </button>
+                            </div>
+                            <div class="linha">
+                                <button onclick="validacao(2)" class="botao texto">
+                                    <span id="spanBotao3"></span>
+                                </button>
+                                <button onclick="validacao(3)" class="botao texto">
+                                    <span id="spanBotao4"></span>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
     </div>
 
 </body>
 
 </html>
+
+<script>
+    listaPerguntas = [
+        {
+            pergunta: "Quem é o filho da fada madrinha?",
+            alternativas: ["Pata Mansa", "Encantado", "João Trombeta", "Fiona"],
+            respostaCerta: 1
+        },
+        {
+            pergunta: "O que o burro vira ao tomar a poção Felizes para Sempre ",
+            alternativas: ["Lobo", "Alazão", "Sapo", "Gato"],
+            respostaCerta: 1
+        },
+        {
+            pergunta: "Aonde o Shrek mora?",
+            alternativas: ["Montanha", "Pântano", "Castelo", "Lagoa"],
+            respostaCerta: 1
+        },
+        {
+            pergunta: "Com quem Shrek assina um contrato e muda a sua vida?",
+            alternativas: ["Farquaad", "João Trombeta", "Rumpelstiltskin", "Humpty Dumpty"],
+            respostaCerta: 2
+        },
+        {
+            pergunta: "Qual personagem tem ursos como a sua família?",
+            alternativas: ["Dragão", "Merlin", "Cachinhos Dourados", "Jack e Jill"],
+            respostaCerta: 2
+        },
+        {
+            pergunta: "Quem é o melhor amigo do Shrek?",
+            alternativas: ["Encantado", "Harold", "Burro", "Biscoito"],
+            respostaCerta: 2
+        },
+        {
+            pergunta: "Quem é o verdadeiro sucessor ao trono?",
+            alternativas: ["Fiona", "Arthur", "Três Porquinhos", "Shrek"],
+            respostaCerta: 3
+        },
+        {
+            pergunta: "Qual personagem se parece um ovo?",
+            alternativas: ["Lillian", "Pata Mansa", "Lobo Mau", "Humpty Dumpty"],
+            respostaCerta: 3
+        },
+        {
+            // pergunta: "Qual desses, apesar de uma infância difícil, sempre se manteve otimista?",
+            pergunta: "Pergunta secreta",
+            alternativas: ["1", "2", "3", "4"],
+            respostaCerta: 0
+        },
+        {
+            //pergunta: "O Gato de Botas luta por sua vida contra quem?"
+            pergunta: "Pergunta secreta 2",
+            alternativas: ["1", "2", "3", "4"],
+            respostaCerta: 0
+        },
+    ]
+
+    var tempo = 60
+    var acertos = 0
+    var questao = 1
+    var aleatorio = 0
+
+    setTimeout(() => {
+        sortear()
+        spanQuestao.innerHTML = `${questao}`
+        spanAcertos.innerHTML = `${acertos}`
+    }, "300")
+
+    function sortear() {
+        if (listaPerguntas.length > 0) {
+            aleatorio = parseInt(Math.random() * listaPerguntas.length)
+            var alternativaQuestoes = listaPerguntas[aleatorio].alternativas
+
+            spanPergunta.innerHTML = `${listaPerguntas[aleatorio].pergunta}`
+            spanBotao1.innerHTML = `${listaPerguntas[aleatorio].alternativas[0]}`
+            spanBotao2.innerHTML = `${listaPerguntas[aleatorio].alternativas[1]}`
+            spanBotao3.innerHTML = `${listaPerguntas[aleatorio].alternativas[2]}`
+            spanBotao4.innerHTML = `${listaPerguntas[aleatorio].alternativas[3]}`
+        }
+    }
+
+    function validacao(alternativaSelecionada) {
+        var alternativaCorreta = listaPerguntas[aleatorio].respostaCerta
+
+        if (alternativaCorreta == alternativaSelecionada) {
+            acertos++
+            spanPergunta.innerHTML = `RESPOSTA CORRETA!`
+            console.log("Você acertou!")
+        } else {
+            spanPergunta.innerHTML = `RESPOSTA ERRADA!`
+            console.log("lIXOOO!")
+        }
+
+        questao++
+        spanAcertos.innerHTML = acertos
+        listaPerguntas.splice(aleatorio, 1)
+
+        if (questao <= 10) {
+            setTimeout(() => {
+                sortear()
+                spanQuestao.innerHTML = questao
+            }, 1000)
+        } else {
+            console.log("Quiz finalizado!")
+        }
+    }
+
+</script>
