--- a/site/public/dashboard/estatistica.html
+++ b/site/public/dashboard/estatistica.html
@@ -2,66 +2,254 @@
 <html lang="pt-br">
 
 <head>
-    <title>Dashboard | Pontuação</title>
-    <link rel="stylesheet" href="css/menu.css">
+  <title>Dashboard | Pontuação</title>
+  <link rel="stylesheet" href="css/menu.css">
+  <link rel="stylesheet" href="css/estatistica.css">
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 
-<body>
-    <div class="tela">
-        <div class="header">
-            <div class="navHeader">
-                <img src="../assets/logo.svg">
+<body onload="obterDadosGrafico(), obterDadosGrafico2(), media(), media2()">
+  <div class="tela">
+    <div class="header">
+      <div class="navHeader">
+        <img src="../assets/logo.svg">
 
-                <div class="infoUsuario">
-                    <div class="icons">
-                        <img src="../assets/icongato.svg" style="height: 80px;">
-                        <img src="../assets/iconfoto.svg" style="height: 21px;">
-                    </div>
-                    <span id="nomeUsuario">Samu</span>
-                </div>
-            </div>
-
-
-
-            <div class="opcoes">
-                <ul>
-                    <li class="destaque">
-                        <a href="estatistica.html">
-                            <span>Estatísticas</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="jogo.html">
-                            <span>Minigame</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="quiz.html">
-                            <span>Quiz</span>
-                        </a>
-                    </li>
-                </ul>
-            </div>
-
-            <div class="botoes">
-                <a href="../index.html">
-                    <button class="botao">Sair</button>
-                </a>
-            </div>
+        <div class="infoUsuario">
+          <div class="icons">
+            <img src="../assets/icongato.svg" style="height: 80px;">
+            <img src="../assets/iconfoto.svg" style="height: 21px;">
+          </div>
+          <span id="nomeUsuario">Samu</span>
         </div>
-        <div class="area">
-            <div class="topo">
-                <span>Estatísticas gerais</span>
-            </div>
+      </div>
 
-            <div class="botoes">
-                <a href="../index.html">
-                    <button class="botao jogo">Gráfico bonitao</button>
-                </a>
-            </div>
-        </div>
+      <div class="opcoes">
+        <ul>
+          <li class="destaque">
+            <a href="estatistica.html">
+              <span>Estatísticas</span>
+            </a>
+          </li>
+          <li>
+            <a href="jogo.html">
+              <span>Minigame</span>
+            </a>
+          </li>
+          <li>
+            <a href="quiz.html">
+              <span>Quiz</span>
+            </a>
+          </li>
+        </ul>
+      </div>
+
+      <div class="botoes">
+        <a href="../index.html">
+          <button class="botao">Sair</button>
+        </a>
+      </div>
     </div>
+    <div class="area">
+      <div class="topo">
+        <span>Estatísticas gerais</span>
+      </div>
 
+      <div class="botoes">
+        <div class="mediaMinigame">
+          <span id="spanMedia"></span>
+        </div>
+        <div class="mediaQuiz">
+          <span id="spanMedia2">5</span>
+        </div>
+      </div>
+
+      <div class="botoes">
+        <div class="graficos">
+          <canvas id="minigame"></canvas>
+        </div>
+
+        <div class="graficos">
+          <canvas id="quiz"></canvas>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 
 </html>
+
+<script>
+  function obterDadosGrafico() {
+    fetch(`/medidas/buscarUltimasAcertos/${sessionStorage.ID_USUARIO}`, { cache: 'no-store' }).then(function (response) {
+      if (response.ok) {
+        response.json().then(function (resposta) {
+          console.log(`Dados recebidos: ${JSON.stringify(resposta)}`);
+          resposta.reverse();
+
+          plotarGrafico(resposta, sessionStorage.ID_USUARIO);
+
+        });
+      } else {
+        console.error('Nenhum dado encontrado ou erro na API');
+      }
+    })
+      .catch(function (error) {
+        console.error(`Erro na obtenção dos dados p/ gráfico: ${error.message}`);
+      });
+  }
+
+  function plotarGrafico(resposta, idUsuario) {
+
+    // Criando estrutura para plotar gráfico - labels
+    let labels = [];
+
+    // Criando estrutura para plotar gráfico - dados
+    let dados = {
+      labels: labels,
+      datasets: [{
+        label: 'Ultimas tentativas',
+        data: [],
+        fill: false,
+        borderColor: '#2E5941',
+        backgroundColor: ['#2E5941'],
+        tension: 0.1
+      }
+      ]
+    };
+
+    console.log('----------------------------------------------')
+    console.log('Estes dados foram recebidos pela funcao "obterDadosGrafico" e passados para "plotarGrafico":')
+    console.log(resposta)
+
+    // Inserindo valores recebidos em estrutura para plotar o gráfico
+    for (i = 0; i < resposta.length; i++) {
+      var registro = resposta[i];
+      labels.push(registro.acertos);
+      dados.datasets[0].data.push(registro.acertos);
+    }
+
+    // Criando estrutura para plotar gráfico - config
+    const config = {
+      type: 'bar',
+      data: dados,
+    };
+
+    // Adicionando gráfico criado em div na tela
+    let myChart = new Chart(
+      document.getElementById(`minigame`),
+      config
+    );
+  }
+
+
+
+
+  function obterDadosGrafico2() {
+    fetch(`/medidas/buscarUltimasAcertos2/${sessionStorage.ID_USUARIO}`, { cache: 'no-store' }).then(function (response) {
+      if (response.ok) {
+        response.json().then(function (resposta2) {
+          console.log(`Dados recebidos: ${JSON.stringify(resposta2)}`);
+
+          plotarGrafico2(resposta2, sessionStorage.ID_USUARIO);
+
+        });
+      } else {
+        console.error('Nenhum dado encontrado ou erro na API');
+      }
+    })
+      .catch(function (error) {
+        console.error(`Erro na obtenção dos dados p/ gráfico: ${error.message}`);
+      });
+  }
+
+  function plotarGrafico2(resposta2, idUsuario) {
+
+    // Criando estrutura para plotar gráfico - labels
+    let labels = [];
+
+    // Criando estrutura para plotar gráfico - dados
+    let dados = {
+      labels: labels,
+      datasets: [{
+        label: 'Ultimas tentativas',
+        data: [],
+        fill: false,
+        borderColor: '#2E5941',
+        backgroundColor: ['#2E5941'],
+        tension: 0.1
+      }
+      ]
+    };
+
+    console.log('----------------------------------------------')
+    console.log('Estes dados foram recebidos pela funcao "obterDadosGrafico" e passados para "plotarGrafico":')
+    console.log(resposta2)
+
+    // Inserindo valores recebidos em estrutura para plotar o gráfico
+    for (i = 0; i < resposta2.length; i++) {
+      var registro = resposta2[i];
+      labels.push(registro.acertos);
+      dados.datasets[0].data.push(registro.acertos);
+    }
+
+    // Criando estrutura para plotar gráfico - config
+    const config = {
+      type: 'bar',
+      data: dados,
+    };
+
+    // Adicionando gráfico criado em div na tela
+    let myChart = new Chart(
+      document.getElementById(`quiz`),
+      config
+    );
+  }
+
+
+
+
+
+
+  function media() {
+    fetch(`/medidas/media/${sessionStorage.ID_USUARIO}`, { cache: 'no-store' }).then(function (response) {
+      if (response.ok) {
+        response.json().then(function (resposta3) {
+          console.log(`Dados recebidos: ${JSON.stringify(resposta3)}`);
+
+          for (var i = 0; i < resposta3.length; i++) {
+            var elementoAtual = resposta3[i];
+            spanMedia.innerHTML = `${elementoAtual.media}`
+          }
+
+        });
+      } else {
+        console.error('Nenhum dado encontrado ou erro na API');
+      }
+    })
+      .catch(function (error) {
+        console.error(`Erro na obtenção dos dados p/ gráfico: ${error.message}`);
+      });
+  }
+
+  function media2() {
+    fetch(`/medidas/media2/${sessionStorage.ID_USUARIO}`, { cache: 'no-store' }).then(function (response) {
+      if (response.ok) {
+        response.json().then(function (resposta4) {
+          console.log(`Dados recebidos: ${JSON.stringify(resposta4)}`);
+
+          for (var i = 0; i < resposta4.length; i++) {
+            var elementoAtual = resposta4[i];
+            spanMedia2.innerHTML = `${elementoAtual.media}`
+          }
+
+        });
+      } else {
+        console.error('Nenhum dado encontrado ou erro na API');
+      }
+    })
+      .catch(function (error) {
+        console.error(`Erro na obtenção dos dados p/ gráfico: ${error.message}`);
+      });
+  }
+
+</script>
