--- a/site/public/login.html
+++ b/site/public/login.html
@@ -32,11 +32,11 @@
                                 Voltar
                             </button>
                         </a>
-                        <a href="index.html">
-                            <button class="botao ir">
+                        
+                            <button onclick="entrar()" class="botao ir">
                                 Entrar
                             </button>
-                        </a>
+                        
                     </div>
                 </div>
 
@@ -50,3 +50,62 @@
 </body>
 
 </html>
+
+<script>
+    function entrar() {
+
+        var emailVar = inputEmail.value;
+        var senhaVar = inputSenha.value;
+
+        if (emailVar == "" || senhaVar == "") {
+            cardErro.style.display = "block"
+            mensagem_erro.innerHTML = "(Mensagem de erro para todos os campos em branco)";
+        }
+
+        console.log("FORM LOGIN: ", emailVar);
+        console.log("FORM SENHA: ", senhaVar);
+
+        fetch("/usuarios/autenticar", {
+            method: "POST",
+            headers: {
+                "Content-Type": "application/json"
+            },
+            body: JSON.stringify({
+                emailServer: emailVar,
+                senhaServer: senhaVar
+            })
+        }).then(function (resposta) {
+            console.log("ESTOU NO THEN DO entrar()!")
+
+            if (resposta.ok) {
+                console.log(resposta);
+
+                resposta.json().then(json => {
+                    console.log(json);
+                    console.log(JSON.stringify(json));
+                    sessionStorage.EMAIL_USUARIO = json.email;
+                    sessionStorage.NOME_USUARIO = json.nome;
+                    sessionStorage.ID_USUARIO = json.idUsuario;
+                    sessionStorage.FKUSUARIO = json.idUsuario
+
+                    setTimeout(function () {
+                        window.location = "./dashboard/estatistica.html";
+                    }, 1000); // apenas para exibir o loading
+
+                });
+
+            } else {
+                console.log("Houve um erro ao tentar realizar o login!");
+
+                resposta.text().then(texto => {
+                    console.error(texto);
+                });
+            }
+
+        }).catch(function (erro) {
+            console.log(erro);
+        })
+
+        return false;
+    }
+</script>
