--- a/site/public/personagens.html
+++ b/site/public/personagens.html
@@ -55,7 +55,7 @@
             <div class="linha">
                 <div class="card">
                     <img src="assets/pharold.svg">
-                    <span>REI HAROLD</span>
+                    <span>HAROLD</span>
                 </div>
                 <div class="card">
                     <img src="assets/plillian.svg">
@@ -74,7 +74,7 @@
             <div class="linha">
                 <div class="card">
                     <img src="assets/pfarquaad.svg">
-                    <span>LORDE FARQUAAD</span>
+                    <span>FARQUAAD</span>
                 </div>
                 <div class="card">
                     <img src="assets/pencantado.svg">
